Release v0.2.1: MCP-compatible Tool Discovery across 5 SDKs
✨ Features:
- Tool Discovery interfaces (DiscoverableService, OperationSchema, ServerInfo)
- MCP JSON Schema support across TypeScript, Go, Java, PHP, Kotlin
- Builder patterns for ergonomic API usage
- Helper utilities for generating MCP-compatible responses

🎯 SDKs Updated:
- TypeScript v0.2.1 (37 tests passing)
- Go v0.2.1 (15 tests passing)
- Java v0.2.1 (18 tests passing)
- PHP v0.2.1 (20 tests passing)
- Kotlin v0.2.1 (already complete)

📊 Statistics:
- 60 new tests created (90 total passing)
- 2,413 lines of code
- 15 new files
- 100% pass rate
- Zero breaking changes

🐛 Bugs Fixed:
- Go: Unused variables in tests
- Java: setCapabilities signature (Map<String,String> → Map<String,Object>)
- Java: MatrixTest offset type mismatch
- Java: Missing enum imports
- PHP: PSR-4 compliance (separated classes into individual files)
- PHP: PHPDoc annotations (array<string,string> → array<string,mixed>)

📖 Documentation:
- Updated CHANGELOG.md for all SDKs
- Updated TEST_COVERAGE.md
- Updated SDK_REVIEW
- Created comprehensive implementation and test reports

✅ Production Ready: All 5 SDKs ready for deployment